# cgue23-cat-to-the-past

./: .gitignore  Cargo.toml  README.md  package.json  readme.txt
.github/workflows/: rust.yml
animations/: Cargo.toml
animations/src/: animation.rs  animation_change.rs  lib.rs
app/: Cargo.toml
app/src/: app.rs  core_stage.rs  entity_event.rs  lib.rs  plugin.rs
assets/: config.json
assets/cat/: cat-cube.vox  cat.vox  you-win.vox
assets/scene/: .gitignore  levels.blend  only_floor_v2.gltf  only_floors.gltf  untitled.gltf
assets/scene/demo/shadow_demo/: shadow_test.glb
assets/scene/levels/: levels.gltf
assets/shaders/: frag.glsl  time_rewinding.glsl  vert.glsl
assets/shaders/bloom/: common.glsl  downsample.comp  quad.frag  upsample.comp
assets/shaders/quad/: quad.frag  quad.vert
assets/shaders/scene/: common.glsl  frag.glsl  vert.glsl
assets/shaders/shadow/: shadow.vert
assets/shaders/ui/: ui.frag  ui.vert
assets/textures/: crosshair.pixi  game_over.pixi  progress_fill.pixi  progress_outline.pixi  progress_outline_stepped.pixi  rewind_arrow.pixi
core/: Cargo.toml
core/src/: lib.rs
debug/: Cargo.toml
debug/src/: lib.rs  log.rs  tracing.rs
demos/: Cargo.toml
game/: Cargo.toml
game/src/: core.rs  game_over.rs  game_ui.rs  input.rs  level_flags.rs  levels.rs  lib.rs  main.rs  physics.rs  pickup_system.rs  player.rs  rewind_power.rs  scene.rs
game/src/core/: application.rs  camera.rs  events.rs  time_manager.rs  transform_change.rs
game/src/core/time_manager/: transform_change.rs
game/src/debug/: tracing.rs
game/src/input/: events.rs  input_map.rs
game/src/levels/: level0.rs  level1.rs  level2.rs
game/src/physics/: physics_change.rs  physics_context.rs  player_physics.rs
game/src/render/: bloom_renderer.rs  context.rs  main_renderer.rs  quad_renderer.rs  scene_renderer.rs
game/src/scene/: loader.rs  material.rs  mesh.rs  model.rs  texture.rs
game_core/: Cargo.toml
game_core/src/: application.rs  asset.rs  camera.rs  level.rs  lib.rs  pickup.rs  signed_duration.rs  time.rs  time_manager.rs
game_core/src/application/: app_stage.rs
game_core/src/level/: level_flags.rs
game_core/src/time_manager/: game_change.rs  level_time.rs
input/: Cargo.toml
input/src/: events.rs  input_map.rs  lib.rs  plugin.rs
levels/: Cargo.toml
levels/src/: current_level.rs  level_id.rs  lib.rs
loader/: Cargo.toml
loader/src/: config_loader.rs  lib.rs  loader.rs
math/: Cargo.toml
math/src/: bounding_box.rs  lib.rs
physics/: Cargo.toml
physics/src/: lib.rs  physics_change.rs  physics_context.rs  physics_events.rs  pickup_physics.rs  player_physics.rs  plugin.rs
render/: Cargo.toml
render/src/: bloom_renderer.rs  context.rs  custom_storage_image.rs  lib.rs  main_renderer.rs  model_uploader.rs  overlay_renderer.rs  quad.rs  quad_renderer.rs  scene.rs  scene_renderer.rs  shadow_renderer.rs  ui_renderer.rs
render/src/scene/: material.rs  mesh.rs  model.rs  texture.rs  ui_component.rs
scene/: Cargo.toml
scene/src/: camera.rs  debug_name.rs  flag_trigger.rs  level.rs  lib.rs  light.rs  material.rs  mesh.rs  model.rs  texture.rs  transform.rs  ui_component.rs
scene_loader/: Cargo.toml
scene_loader/src/: loader.rs
src/: application.rs  camera.rs  context.rs  core.rs  input.rs  lib.rs  main.rs  mesh.rs  physics.rs  physics_context.rs  player.rs  render.rs  scene.rs  time.rs  time_manager.rs  vulkan_graphics.rs
src/core/: application.rs  camera.rs  time.rs  time_manager.rs
src/core/time_manager/: game_change.rs  level_time.rs  transform_change.rs
src/input/: events.rs  input_map.rs
src/physics/: physics_change.rs  physics_context.rs  player_physics.rs
src/render/: bloom_renderer.rs  context.rs  custom_storage_image.rs  main_renderer.rs  quad_renderer.rs  scene_renderer.rs
src/scene/: bounding_box.rs  light.rs  loader.rs  material.rs  mesh.rs  model.rs  scene_graph.rs  texture.rs  transform.rs
time/: Cargo.toml
time/src/: lib.rs  time.rs  time_manager.rs
time/src/time_manager/: game_change.rs  level_time.rs
windowing/: Cargo.toml
windowing/src/: config.rs  events.rs  icon.rs  lib.rs  window.rs
