
[workspace]
members = [
    "scene",
    "game_core",
    "physics",
    "math",
    "windowing",
    "render",
    "input",
    "game",
    "debug",
    "animations",
    "demos",
    "scene_loader"
]

[profile.dev.package.vulkano]
opt-level = 1

[workspace.dependencies]
bevy_ecs = { version = "0.10.1" }
nalgebra = { version = "0.32.2" }