
[workspace]
members = [
    "app",
    "scene",
    "time",
    "physics",
    "math",
    "windowing",
    "render",
    "input",
    "game",
    "debug",
    "animations",
    "demos",
    "loader"
]

[profile.dev.package.vulkano]
opt-level = 1

[workspace.dependencies]
bevy_ecs = { version = "0.10.1" }
nalgebra = { version = "0.32.2" }
uuid = { version = "1.3.3", features = ["v4", "fast-rng"] }