[package]
name = "debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs.workspace = true

bevy_utils = { version = "0.10.1", optional = true, features = ["detailed_trace"] }
tracing-chrome = { version = "0.7.1", optional = true }
tracing-subscriber = { version = "0.3.16", optional = true, features = ["registry", "env-filter"] }
tracing-log = { version = "0.1.3", optional = true }
tracing-error = { version = "0.2.0", optional = true }
tracing-tracy = { version = "0.10.2", optional = true }


[features]
default = []
trace = ["tracing-core", "tracing-tracy"]
tracing-core = [
  "dep:bevy_utils", 
  "dep:tracing-subscriber", 
  "dep:tracing-log", 
  "dep:tracing-error", 
  "bevy_ecs/trace",
]
tracing-chrome = ["dep:tracing-chrome"]
tracing-tracy = ["dep:tracing-tracy"]
