[package]
name = "demos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = { version = "0.10.1" }
nalgebra = {version = "0.32.2" }

game = { path = "../game" }
game_core = { path = "../game_core" }
physics = { path = "../physics" }
scene = { path = "../scene" }
math = { path = "../math" }
