[package]
name = "demos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs.workspace = true
nalgebra.workspace = true

game = { path = "../game" }
app = { path = "../app" }
game_core = { path = "../game_core" }
physics = { path = "../physics" }
scene = { path = "../scene" }
math = { path = "../math" }
