[package]
name = "game"
version = "0.1.0"
edition = "2021"
default-run = "game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
vulkano = { version = "0.33.0", features = []}
vulkano-win = "0.33.0"
winit = "0.28"
vulkano-shaders = "0.33.0"
nalgebra = {version = "0.32.2" }
angle = "0.5.0"
bevy_ecs = { version = "0.10.1" }
gltf = { git = "https://github.com/stefnotch/gltf.git", branch = "feat/emissive_strength", features = ["extras", "names", "KHR_lights_punctual", "KHR_materials_emissive_strength"] }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"]}

math = { path = "../math" }
windowing = { path = "../windowing" }
game_core = { path = "../game_core" }
debug = { path = "../debug" }
scene = { path = "../scene" }
physics = { path = "../physics" }
input = { path = "../input" }
render = { path = "../render" }

[features]
default = []
trace = ["debug/trace"]
