[package]
name = "game"
version = "0.1.0"
edition = "2021"
default-run = "game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
nalgebra.workspace = true
angle = "0.5.0"
bevy_ecs.workspace = true
uuid.workspace = true

math = { path = "../math" }
windowing = { path = "../windowing" }
game_core = { path = "../game_core" }
debug = { path = "../debug" }
scene = { path = "../scene" }
physics = { path = "../physics" }
input = { path = "../input" }
render = { path = "../render" }
loader = { path = "../loader"}
animations = { path = "../animations"}
app = { path = "../app"}

[features]
default = []
trace = ["debug/trace"]
