[package]
name = "game_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = { version = "0.10.1" }
angle = "0.5.0"
nalgebra = {version = "0.32.2" }
uuid = { version = "1.3.0", features = ["v4", "fast-rng"]}