[package]
name = "physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = { version = "0.10.1" }
nalgebra = {version = "0.32.2" }
rapier3d = { version = "0.17.2", features = [ "simd-stable", "debug-render" ] }
crossbeam = "0.8.2"

game_core = { path = "../game_core" }
math = { path = "../math" }
scene = { path = "../scene" }