[package]
name = "physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs.workspace = true
nalgebra.workspace = true
rapier3d = { version = "0.17.2", features = [ "simd-stable", "debug-render" ] }
crossbeam = "0.8.2"

time = { path = "../time" }
math = { path = "../math" }
scene = { path = "../scene" }
app = { path = "../app" }
levels = { path = "../levels" }