[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
vulkano = { version = "0.33.0", features = []}
vulkano-win = "0.33.0"
winit = "0.28"
vulkano-shaders = "0.33.0"
angle = "0.5.0"
nalgebra.workspace = true
bevy_ecs.workspace = true

math = { path = "../math" }
game_core = { path = "../game_core" }
scene = { path = "../scene" }