[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
vulkano = { version = "0.33.0", features = []}
raw-window-handle = "0.5.2"
vulkano-win = { version = "0.33.0", default-features = false, features = ["raw-window-handle"] }
vulkano-shaders = "0.33.0"
angle = "0.5.0"
nalgebra.workspace = true
bevy_ecs.workspace = true

math = { path = "../math" }
scene = { path = "../scene" }
app = { path = "../app" }
time = { path = "../time" }
windowing = { path = "../windowing" }
levels = { path = "../levels" }