[package]
name = "windowing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
image = { version = "0.24.6", default-features = false, features = ["png"] }
bevy_ecs.workspace = true
app = { path = "../app" }